# booster-lander-simulator

./: .gitignore  CLAUDE_v0.md  CLAUDE_v1.md  CLAUDE_v2.md  CMakeLists.txt  DECISIONS.md  HANDOFF_2026-07-18.md  HANDOFF_2026-07-18_EVENING.md  HANDOFF_2026-07-18_NIGHT.md  HANDOFF_2026-07-19_CONTINUITY.md  NEXT_SESSION.md  README.md  ROADMAP.md  RUN_STATE.md  build_out.txt  cfly_diag.txt  cfly_rate_check.sh  cfly_smoke_stderr.txt  cmake_cfg.txt
.github/workflows/: ci.yml
core/: CMakeLists.txt  atmosphere.c  atmosphere.h  constants.h  contact.c  contact.h  control.c  control.h  dynamics.c  dynamics.h  guidance.h  guidance_cfly.c  guidance_cfly.h  guidance_hoverslam.c  guidance_hoverslam.h  guidance_mppi.c  guidance_mppi.h  guidance_mppi_cuda.cu  guidance_mppi_cuda.h  guidance_mppi_rollout.cuh  guidance_neural.c  guidance_neural.h  guidance_rfly.c  guidance_rfly.h  integrator.c  integrator.h  main.c  nav.c  nav.h  neural_policy_weights.h  policy_obs.h  policy_tap.h  protocol.h  rng.h  scenario.c  scenario.h  sea.c  sea.h  sim.c  sim.h  (+4 more)
goldens/mc/: aero_mppi_s42_d009_baseline.txt  aero_mppi_s42_d010_baseline.txt  aero_mppi_s42_d012_baseline.txt  aero_pre_mppi_s42.txt  aero_t0_s42_d009_baseline.txt  aero_t0_s42_d010_baseline.txt  aero_t0_s42_d012_baseline.txt  entry_mppi_s42_d016_baseline.txt  entry_s42_d009_baseline.txt  entry_s42_d010_baseline.txt  entry_s42_d012_baseline.txt  terminal_s42_baseline.txt
goldens/protocol/: evt.hex  hello.hex  tlm.hex
runs/: C_aero_s42.csv  C_chaos_s42.csv  C_terminal_s42.csv  D019_proposed_canon_v2.md  D030_draft.md  D031_draft.md  D035_draft.md  D040_draft.md  DISTURBANCE_MATRIX_C.md  FAILURE_TAXONOMY_C.md  IGNITION_TRANSIENT_ANALYSIS.md  ad5.csv  ad6.csv  ad7.csv  ad8.csv  ad9.csv  adf.csv  aero_diag.csv  aero_diag2.csv  aero_diag3.csv  aero_diag4.csv  agentB_mppi_design.md  agentP5_aoa_hold_control.md  analyze_C.py  as_7.csv  as_99.csv  brainstorm_canon.md  brainstorm_dave_bonsai.md  brainstorm_figurehead.md  brainstorm_terminal.md  buckets_C.py  build_regression_C.py  cfly_diag2.txt  cfly_rate_s42.txt  cfly_rate_s42_faithful.txt  covo_report.md  covo_screen.csv  cuda_mppi_report.md  cuda_rebase_report.md  d009_aero_c1.csv  (+163 more)
runs/audit_P2/: P2_AERO_VERDICT.md  aero_verify.c  build_run.bat  cop_physics.c  cop_physics2.c  cop_sign.c  crossover.c  fin_cna.c  quat_alpha.c  stability_sim.c
runs/sandbox/: aero_descent.py  agentA_fin_model.md  aoa_schedule.py  ceiling.c  ceiling.cmd  ceiling_eo.c  ceiling_eo.cmd  ceiling_eo_out.txt  ceiling_out.txt  crossrange.py  entry_sizing.py  entry_sizing2.py  entry_sizing3.py  entrydiv.c  entrydiv.cmd  entrydiv_out.txt  int_out.txt  integrated_entry.py  p1_build.cmd  p1_cop.c  p1_gimbal.c  p1_hello.c  p1_p5form.c  p1_shape.c  p1_signrecon.c  p1_slope.c  p1_stabsign.c  p1_trim.c  p1_trim2.c  p1_trimfix.c  p1_trimtrue.c  p1_verify.c  p1_verify2.c  p1_zeta.c  p4_divert.c  p4_out.txt  p5_cloop.c  p5_cloop_out.txt  p5_trim.c  p5_trim_out.txt
shell/: Cargo.toml  tauri.conf.json
shell/capabilities/: default.json
shell/src/: commands.rs  job.rs  main.rs  supervisor.rs
tools/: README.md  make_portable.ps1  mcdiff.c  tracestat.c
ui/: constellation.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/scripts/: hello_gate_live.mts  smoke.mts  verify_parse.mjs
ui/smoke/: audio_smoke.mts
ui/src/: main.ts
ui/src/audio/: audioEngine.ts  crackle.test.ts  crackle.ts  devPanel.ts  evtDecode.test.ts  evtDecode.ts  index.ts  propagation.test.ts  propagation.ts  propagationChain.ts  synthLayers.ts
ui/src/constellation/: app.ts  design.test.ts  design.ts  dom.test.ts  dom.ts  runData.test.ts  runData.ts  scene.ts  types.ts
ui/src/constellation/__fixtures__/: d012_entry_v4.csv
ui/src/director/: director.test.ts  director.ts
ui/src/fx/: plume.ts
ui/src/hud/: cameraBar.ts  fidelity.ts  hud.ts  injectPanel.ts  screenshot.ts  timeline.test.ts  timeline.ts
ui/src/net/: client.ts  commands.test.ts  commands.ts  decode.test.ts  decode.ts  events.test.ts  events.ts  frame.test.ts  frame.ts  interp.ts
ui/src/scene/: documentaryScene.ts  earth.ts  environment.ts  floatingOrigin.ts  markers.test.ts  markers.ts  postfx.ts  renderer.ts  sea.test.ts  sea.ts  targetMarker.test.ts  targetMarker.ts  uglyScene.ts
ui/src/shell/: hello.test.ts  hello.ts  mount.ts  shellCss.ts  state.ts  tauriBridge.ts
ui/src/shell/components/: connectionChip.ts  picker.ts  stderrPanel.ts  wireLog.ts
