[package]
name = "booster-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "Tauri v2 shell: spawns core as a sidecar and supervises it (canon §11.1). Nothing else."

[lib]
name = "booster_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
